frontend changes for events
