# wp1/web/selection.py
@@ -6,10 +6,12 @@ selection = flask.Blueprint('selection', __name__)
 
 
 @selection.route('/simple', methods=['POST'])
-def get_article_names():
-  list_name = flask.request.get_json()['list_name']
-  items = flask.request.get_json()['article_name']
-  if not items or not list_name:
+def create():
+  response = flask.request.get_json()
+  list_name = response['list_name']
+  items = response['article_name']
+  project = response['project_name']
+  if not items or not list_name or not project:
     flask.abort(400)
   valid_article_names, invalid_article_names, forbiden_chars = selections.validate_list(
       items)
